# ibm-pldm-oem

./: .gitignore  MAINTAINERS  Makefile.am  README.md  configure.ac  groups  project.config
libpldm/: Makefile.am  base.c  base.h  file_io.c  file_io.h  libpldmoem.pc.in  pldm_types.h
libpldmresponder/: Makefile.am  file_io.cpp  file_io.hpp  file_table.cpp  file_table.hpp
test/: Makefile.am  libpldm_fileio_test.cpp  libpldmresponder_fileio_test.cpp
